--- a/my-profile/src/App.css
+++ b/my-profile/src/App.css
@@ -1,23 +1,18 @@
 .app {
-  text-align: center;
   display: flex;
-  max-width: 0 auto;
-  padding: 1280px;
-  min-width: 100vh;
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 0 15px;
+  min-height: 100vh;
   border-radius: 10px;
   flex-direction: column;
   background-color: #ffffff;
 }
+
 @media (min-width: 800px) {
-  .app{
+  .app {
     padding: 0 100px;
     margin-top: 5vh;
     min-height: 90vh;
   }
 }
-
-
-
-
-
-
