--- a/my-profile/src/components/Home/style.css
+++ b/my-profile/src/components/Home/style.css
@@ -54,5 +54,15 @@
     }
     .home .person img {
       width: 100%;
+      
     }
+  img {
+    margin-left: 30px;
+    border-radius: 50%;
+  }
+  .homeImage {
+    display: flex;
+
+  }
+
   }
